tests/calico_testcases/example_policies/testcase13-protocol/testcase13-kube-system-match-not-protocol.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: kube-system-with-matching-protocols
  namespace: kube-system
spec:
  selector: tier == 'frontend'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: 132 #(SCTP)
    source:
      selector: app  == 'keepalived-watcher'
  - action: Allow
    protocol: TCP
    source:
      selector: app  == 'keepalived-watcher'
  egress:
  - action: Allow
    notProtocol: SCTP
    destination:
      selector: app  == 'keepalived-watcher'
  - action: Allow
    notProtocol: 6 #(TCP)
    destination:
      selector: app  == 'keepalived-watcher'
