tests/calico_testcases/example_policies/testcase13-protocol/testcase13-open-default-TCP.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase1-networkpolicy-open-default-namespace
  namespace: default
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: all()
  egress:
  - action: Allow
    protocol: UDPLite
    destination:
      selector: all()
