tests/calico_testcases/example_policies/testcase13-protocol/testcase13-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np_kube-system-non-matching-protocolos
    networkPolicyList:
      - testcase13-kube-system-different-protocols.yaml
      - testcase13-open-default-TCP.yaml
    expected_warnings: 0

  - name: match-protocol
    networkPolicyList:
      - testcase13-kube-system-match-protocol.yaml
      - testcase13-open-default-TCP.yaml
    expected_warnings: 0

  - name: match-not-protocol
    networkPolicyList:
      - testcase13-kube-system-match-not-protocol.yaml
    expected_warnings: 0

  - name: no-match-not-protocol
    networkPolicyList:
      - testcase13-kube-system-no-match-not-protocol.yaml
    expected_warnings: 0

  - name: also-with-deny
    networkPolicyList:
      - testcase13-also-with-deny.yaml
    expected_warnings: 0

queries:
  - name: policies_not_empty
    emptiness:
      - np_kube-system-non-matching-protocolos
      - match-protocol
      - no-match-not-protocol
      - also-with-deny/kube-system/onlyAllow-TCP
      - also-with-deny/kube-system/FirstDenySubset-UDP
    expected: 0

  - name: no_match_protocols_between_namespaces_vacuous
    vacuity:
      - np_kube-system-non-matching-protocolos
      - no-match-not-protocol
    expected: 2

  - name: not_vacuous_policies
    vacuity:
      - match-protocol
      - match-not-protocol
      - also-with-deny/kube-system/onlyAllow-TCP
      - also-with-deny/kube-system/FirstDenySubset-UDP
      - also-with-deny/kube-system/allow-all-deny-all-different-protocols
    expected: 0

  - name: policies_redundant_in_vacuous
    redundancy:
        - np_kube-system-non-matching-protocolos
    expected: 2

  - name: policies_redundant_in_non-vacuous
    redundancy:
        -  match-protocol
    expected: 3

  - name: rules_not_redundant_in_match_not_protocol
    redundancy:
        - match-not-protocol
    expected: 0

  - name: deny_other_protocol_redundant
    redundancy:
        - also-with-deny/kube-system/FirstDenySubset-UDP
        - also-with-deny/kube-system/allow-all-deny-all-different-protocols
    expected: 3

  - name: deny_other_protocol_no_effect
    equivalence:
        - also-with-deny/kube-system/onlyAllow-TCP
        - also-with-deny/kube-system/FirstDenySubset-UDP
    expected: 0
